flux/infrastructure/micro/services/image-editor/service.yaml
# Auto-split from cluster files
apiVersion: v1
kind: Service
metadata:
  name: image-editor-api
  namespace: micro
spec:
  selector:
    app: image-editor-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: image-editor-frontend
  namespace: micro
spec:
  selector:
    app: image-editor-frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
