flux/infrastructure/micro/services/image-editor/ingressroute.yaml
# Auto-split from cluster files
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: image-editor
  namespace: micro
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`editor.tools.becklab.cloud`) && PathPrefix(`/api/`)
    kind: Rule
    middlewares:
    - name: image-editor-api-role-chain
      namespace: identity
    services:
    - name: image-editor-api
      port: 80
      sticky: false
  - match: Host(`editor.tools.becklab.cloud`)
    kind: Rule
    middlewares:
    - name: image-editor-api-role-chain
      namespace: identity
    services:
    - name: image-editor-frontend
      port: 80
      sticky: false
